reuse options, pr comments