@@ -35,6 +35,7 @@ jar {
     }
 }
 
+
 if (project.hasProperty('java11Home')) {
     javaVersion = "1.11"
     def java11Home = project.findProperty('java11Home')
@@ -45,27 +46,8 @@ if (project.hasProperty('java11Home')) {
     }
 } else if (project.hasProperty('java17Home')) {
     javaVersion = "1.17"
-    def java17Home = project.findProperty("java17Home")
     project.tasks.withType(JavaCompile) {
-        options.fork = true
-        options.forkOptions.javaHome = java17Home as File
-        options.compilerArgs += ['-Xlint:-path']
-        // Error prone requires some packages to be exported/opened for Java 17
-        // Disabling checks since this property is only used for Jenkins tests
-        // https://github.com/tbroyer/gradle-errorprone-plugin#jdk-16-support
-        options.errorprone.errorproneArgs.add("-XepDisableAllChecks")
-        options.forkOptions.jvmArgs += [
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-        ]
+        setJava17Options(options)
 
         checkerFramework {
             skipCheckerFramework = true
